<!--
  ~ Copyright (c) 2014, 2015 Qualcomm Technologies Inc
  ~
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification,
  ~ are permitted (subject to the limitations in the disclaimer below) provided that
  ~ the following conditions are met:
  ~
  ~ Redistributions of source code must retain the above copyright notice, this list
  ~ of conditions and the following disclaimer.
  ~
  ~ Redistributions in binary form must reproduce the above copyright notice, this
  ~ list of conditions and the following disclaimer in the documentation and/or
  ~ other materials provided with the distribution.
  ~
  ~ Neither the name of Qualcomm Technologies Inc nor the names of its contributors
  ~ may be used to endorse or promote products derived from this software without
  ~ specific prior written permission.
  ~
  ~ NO EXPRESS OR IMPLIED LICENSES TO ANY PARTY'S PATENT RIGHTS ARE GRANTED BY THIS
  ~ LICENSE. THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
  ~ "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
  ~ THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
  ~ ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE
  ~ FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  ~ SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
  ~ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~ OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<resources>
    <string name="app_name">RoboWizzard</string>
    <string name="web_client_id">272707929847-03a44816mrgrlu6g4hc84j51ja24oh16.apps.googleusercontent.com</string>
    <string name="edit">Edit</string>
    <string name="export">Export</string>
    <string name="delete">Delete</string>
    <string name="item_name">Item</string>
    <string name="toolbar_run">Run</string>
    <string name="toolbar_stop">Stop</string>
    <string name="toolbar_about">About</string>
    <string name="toolbar_add">New…</string>
    <string name="toolbar_help">Help</string>
    <string name="toolbar_save">Save</string>
    <string name="toolbar_scan">Scan</string>
    <string name="toolbar_add_layout">New Layout</string>
    <string name="toolbar_add_import">Import Layout</string>
    <string name="toolbar_add_motor_controller">New Motor Controller</string>
    <string name="toolbar_add_servo_controller">New Servo Controller</string>
    <string name="toolbar_add_legacy_module_controller">New Legacy Module Controller</string>
    <string name="toolbar_add_device_interface_module">New Device Interface Module</string>
    <string name="layout_name">Layout Name</string>
    <string name="controller_name">Controller Name</string>
    <string name="serial_number">Serial Number</string>
    <string name="device_name">Device Name</string>
    <string name="port_number">0</string>
    <string name="category_port_name">Port</string>
    <string name="category_attached_device">Attached Device</string>
    <string name="min">Min</string>
    <string name="zero">Zero</string>
    <string name="max">Max</string>
    <string name="value">Value</string>
    <string name="sign_in">Sign In</string>
</resources>
