<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2014, 2015 Qualcomm Technologies Inc
  ~
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification,
  ~ are permitted (subject to the limitations in the disclaimer below) provided that
  ~ the following conditions are met:
  ~
  ~ Redistributions of source code must retain the above copyright notice, this list
  ~ of conditions and the following disclaimer.
  ~
  ~ Redistributions in binary form must reproduce the above copyright notice, this
  ~ list of conditions and the following disclaimer in the documentation and/or
  ~ other materials provided with the distribution.
  ~
  ~ Neither the name of Qualcomm Technologies Inc nor the names of its contributors
  ~ may be used to endorse or promote products derived from this software without
  ~ specific prior written permission.
  ~
  ~ NO EXPRESS OR IMPLIED LICENSES TO ANY PARTY'S PATENT RIGHTS ARE GRANTED BY THIS
  ~ LICENSE. THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
  ~ "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
  ~ THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
  ~ ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE
  ~ FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  ~ SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
  ~ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~ OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/portNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/port_number"
        android:textSize="22sp"
        android:layout_marginStart="25dp"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="@dimen/toolbar_padding"
        android:paddingEnd="@dimen/toolbar_padding">
        <TextView
            android:id="@+id/portName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/device_name" />
        <SeekBar
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:max="200"
            android:progress="100" />
        <LinearLayout
            android:id="@+id/ticks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:orientation="horizontal">
            <include layout="@layout/tick" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">
            <TextView
                android:id="@+id/sliderMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min" />
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/sliderZero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"/>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/sliderMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max"/>
        </LinearLayout>
    </LinearLayout>
    <org.webb.robowizzard.BetterEditText
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_gravity="center"
        android:gravity="right"
        android:singleLine="true"
        android:text="@string/value"
        android:imeOptions="actionDone"/>
</LinearLayout>