<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2014, 2015 Qualcomm Technologies Inc
  ~
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification,
  ~ are permitted (subject to the limitations in the disclaimer below) provided that
  ~ the following conditions are met:
  ~
  ~ Redistributions of source code must retain the above copyright notice, this list
  ~ of conditions and the following disclaimer.
  ~
  ~ Redistributions in binary form must reproduce the above copyright notice, this
  ~ list of conditions and the following disclaimer in the documentation and/or
  ~ other materials provided with the distribution.
  ~
  ~ Neither the name of Qualcomm Technologies Inc nor the names of its contributors
  ~ may be used to endorse or promote products derived from this software without
  ~ specific prior written permission.
  ~
  ~ NO EXPRESS OR IMPLIED LICENSES TO ANY PARTY'S PATENT RIGHTS ARE GRANTED BY THIS
  ~ LICENSE. THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
  ~ "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
  ~ THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
  ~ ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE
  ~ FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  ~ SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
  ~ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~ OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<org.webb.robowizzard.ObservableHorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/itemButton"
            android:text="@string/item_name"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            style="@style/ButtonTheme"
            android:gravity="left|center_vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            tools:ignore="RtlHardcoded,RtlSymmetry" />
        <Button
            android:id="@+id/exportButton"
            android:text="@string/export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/secondaryColor"
            style="@style/ButtonTheme" />
        <Button
            android:id="@+id/deleteButton"
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FF0000"
            style="@style/ButtonTheme" />
    </LinearLayout>
</org.webb.robowizzard.ObservableHorizontalScrollView>