<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2014, 2015 Qualcomm Technologies Inc
  ~
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification,
  ~ are permitted (subject to the limitations in the disclaimer below) provided that
  ~ the following conditions are met:
  ~
  ~ Redistributions of source code must retain the above copyright notice, this list
  ~ of conditions and the following disclaimer.
  ~
  ~ Redistributions in binary form must reproduce the above copyright notice, this
  ~ list of conditions and the following disclaimer in the documentation and/or
  ~ other materials provided with the distribution.
  ~
  ~ Neither the name of Qualcomm Technologies Inc nor the names of its contributors
  ~ may be used to endorse or promote products derived from this software without
  ~ specific prior written permission.
  ~
  ~ NO EXPRESS OR IMPLIED LICENSES TO ANY PARTY'S PATENT RIGHTS ARE GRANTED BY THIS
  ~ LICENSE. THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
  ~ "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
  ~ THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
  ~ ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE
  ~ FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
  ~ SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
  ~ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~ OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">
        <Button
            android:id="@+id/deleteButton"
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FF0000"
            style="@style/ButtonTheme" />
    </LinearLayout>

    <org.webb.robowizzard.ObservableHorizontalScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:overScrollMode="never">
        <LinearLayout
            android:id="@+id/buttonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false">
                <Button
                    android:text="@string/item_name"
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/itemButton"
                    android:background="@drawable/button_selector"
                    style="@style/ButtonTheme"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingBottom="15dp"
                    tools:ignore="RtlHardcoded,RtlSymmetry"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />

                <TextView
                    android:text="@string/serial_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/serialNumber"
                    android:layout_alignParentStart="true"
                    android:layout_alignBottom="@id/itemButton"
                    android:textSize="12sp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:fontFamily="monospace"
                    tools:ignore="RtlHardcoded"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />
            </RelativeLayout>
            <Button
                android:id="@+id/deleteButtonDummy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                style="@style/ButtonTheme"/>
        </LinearLayout>
    </org.webb.robowizzard.ObservableHorizontalScrollView>

</RelativeLayout>